# securicad-vanguard-sdk

./: MANIFEST.in  NOTICE  README.md  RELEASE.md  dependencies.txt  dev-requirements.in  dev-requirements.txt  example.py  generate_requirements.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.fmt/: install-githook.sh  pre-commit
securicad/vanguard/: __init__.py  client.py  exceptions.py  model.py
tools/git-hooks/: install.sh
tools/git-hooks/pre-commit.d/: format-python.sh
tools/scripts/: create_requirements.sh  create_venv.sh  run_mypy.sh  run_pylint.sh
vanguard/: __init__.py  client.py  model.py
