[metadata]
name = securicad-vanguard
version = attr: securicad.vanguard.__version__
author = Foreseeti AB
description = A Python SDK for foreseeti's securiCAD Vanguard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foreseeti/securicad-vanguard-sdk
license = The Apache Software License, Version 2.0
license_files =
  LICENSE
  NOTICE
keywords =
  securicad
  vanguard
  threat
  modeling
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Security
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: Software Development :: Libraries :: Python Modules
  Typing :: Typed

[options]
zip_safe = False
install_requires =
  beautifulsoup4
  boto3
  botocore
  pycognito
  securicad-model
  requests
python_requires = >=3.8
packages =
  securicad.vanguard

[options.extras_require]
dev =
  black
  boto3-stubs
  build
  isort
  mypy
  pylint
  twine
  types-beautifulsoup4
  types-requests

[options.package_data]
securicad.vanguard = py.typed
